# spotify-dl

./: Cargo.toml
.github/workflows/: main.yml
src/: channel_sink.rs  downloader.rs  main.rs  track.rs
src/encoder/: flac.rs  mod.rs  mp3.rs
